--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,7 @@
 # DB secrets
+
+# This file is revealed for testing purposes. All credentials will be made obsolete once testing is completed
+
 PORT = 5000
 
 MONGO_DB_URI = mongodb+srv://minhquangtran1203:esVMBedgFvIGsD51@dataplot.idukmx0.mongodb.net/dataPlot?retryWrites=true&w=majority
