--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "function-plot": "^1.24.0",
     "mongoose": "^8.1.0",
     "regression": "^2.0.1"
